--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^5.0.0-beta.5",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
@@ -15,6 +16,7 @@
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "file-saver": "^2.0.5",
     "firebase": "^9.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.3",
     "@types/styled-components": "^5.1.15"
   }
 }
